# factoreally

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
src/factoreally/: __init__.py  __main__.py  cli.py  constants.py  create_spec.py  extract.py  factory.py  factory_spec.py  json_spec.py  pydantic_models.py
src/factoreally/analyzers/: __init__.py  alphanumeric_analyzer.py  array_analyzer.py  base.py  choice_analyzer.py  null_analyzer.py  number_analyzer.py  object_analyzer.py  presence_analyzer.py  string_pattern_analyzer.py
src/factoreally/hints/: __init__.py  alphanumeric_hint.py  array_hint.py  auth0_id_hint.py  base.py  choice_hint.py  constant_value_hint.py  date_hint.py  datetime_hint.py  duration_range_hint.py  mac_address_hint.py  missing_hint.py  null_hint.py  number_hint.py  number_string_hint.py  object_hint.py  text_hint.py  uuid4_hint.py  version_hint.py
tests/create_spec/: __init__.py  test_create_spec.py
tests/extract/: __init__.py  test_extract_data.py
tests/factory/: conftest.py  test_arrays.py  test_basic.py  test_duration.py  test_integration.py  test_interfaces.py  test_nulls.py  test_overrides.py
tests/factory_spec/: __init__.py  test_factory_spec_build.py  test_load_factory_spec.py  test_parse_field_paths.py
tests/hints/: test_alphanumeric_hint.py  test_array_hint.py  test_auth0_id_hint.py  test_base.py  test_choice_hint.py  test_constant_value_hint.py  test_date_hint.py  test_datetime_hint.py  test_duration_range_hint.py  test_mac_address_hint.py  test_missing_hint.py  test_null_hint.py  test_number_hint.py  test_number_string_hint.py  test_object_hint.py  test_text_hint.py  test_uuid4_hint.py  test_version_hint.py
tests/json_spec/: __init__.py  test_get_value_hint.py
tests/pydantic_models/: conftest.py  test_analyze_pydantic_model.py  test_import_pydantic_model.py  test_is_dynamic_dict_field.py
